[package]
name = "liftbridge"
version = "0.1.2"
authors = ["Roman Useinov <roman.useinov@gmail.com>"]
edition = "2018"
description = "Liftbridge client for rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["client", "pubsub", "liftbridge", "queue", "stream"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
tokio = { version = "1.6", features = ["time"] }
rand = "0.8"
lru = "0.6"
parking_lot = "0.11"

[build-dependencies]
tonic-build = "0.4"

[[example]]
name = "pubsub"
path = "examples/pubsub/main.rs"
